# ML-E2E-Project

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  README.md  docker-compose.yml  dvc.yaml  kubeflow_pipeline.py  kubeflow_pipeline.yaml  pipeline.py  pipeline.yaml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci-cd.yml  ci.yml  codeql.yml
.kiro/specs/enhanced-mlops-pipeline/: design.md  requirements.md  tasks.md
app/: main.py  model_serving.py
app/api/: routes.py
app/core/: config.py  logging_config.py
app/rag/: documents.py  embeddings.py  qa.py
app/static/css/: styles.css
app/static/js/: script.js
app/templates/: error.html  index.html
aws/cloudformation/: ml-infrastructure.yaml
config/: data_config.yaml  model_config.yaml  preprocessing_config.yaml
data/: knowledge_base.json
k8s/manifests/: mlflow-deployment.yaml  model-serving-deployment.yaml  namespace.yaml  postgres-deployment.yaml
kubeflow/pipelines/: ml_pipeline.py
ml_pipeline/scripts/: data_collection.py  data_preprocessing.py  evaluate_model.py  train_model.py
qdrant_storage/: raft_state.json
scripts/: deploy.sh
tests/: test_data_processing.py  test_main.py
