[project]
name = "ml-e2e-project"
version = "0.1.0"
description = "End-to-End ML Project with MLFlow, DVC, and Kubernetes Deployment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.110.0",
    "jinja2>=3.1.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    # ML and Data Science
    "mlflow>=2.8.0",
    "dvc[s3]>=3.0.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "joblib>=1.3.0",
    # Kubeflow
    "kfp>=2.0.0",
    "kubernetes>=27.0.0",
    # AWS
    "boto3>=1.28.0",
    "botocore>=1.31.0",
    # Monitoring and Logging
    "prometheus-client>=0.17.0",
    "structlog>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
